# CollegeBrain

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: data_ingestion.yml
backend/: auto_seed.py  collegebrain.db  database.py  ingestion_engine.py  live_scraper.py  main.py  pyproject.toml  test_scraper.py
src/: App.jsx  index.css
