[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ddgs>=9.14.4",
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
